# ai-sales

./: .gitignore  README.md  main.py  pyproject.toml  server.py
ai-sales-frontend/: SETUP.md  package-lock.json  package.json
ai-sales-frontend/src/app/: page.tsx
ai-sales-frontend/src/components/: AudioStreamer.tsx
